<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="853px"
	android:layout_height="600px"
	android:orientation="vertical"
	android:background="#029443">
	<LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="100px"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		android:layout_marginTop="35px">
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
            android:text="@string/nextstation_cn"
			android:textColor="#FFFFFF"
			android:textSize="70px"
			android:layout_marginLeft="50px"/>
            
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/nextstation_eng"
			android:textColor="#FFFFFF"
			android:textSize="55px"
			android:layout_marginLeft="230px"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="270px"
	    android:orientation="vertical"
	    android:layout_marginTop="35px"
	    android:background="#FFFFFF">
	    <TextView 
	        android:id="@+id/tv_nextStation_cn"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/nextstationname_cn"
	        android:textColor="#029443"
	        android:textSize="90px"
	        android:gravity="center"
	        android:layout_marginTop="35px"/>
	    
	    <TextView 
	        android:id="@+id/tv_nextStation_eng"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/nextstationname_eng"
	        android:textColor="#029443"
	        android:textSize="50px"
	        android:gravity="center"
	        android:layout_marginTop="35px"/>
	</LinearLayout>
	<ImageView 
	    android:layout_width="25px"
	    android:layout_height="25px"
	    android:src="@drawable/red_dot"
	    android:layout_marginLeft="728px"/>
</LinearLayout>
