<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="1920px"
    android:layout_height="330px"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70px"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="480px"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#029443"
            android:gravity="center_vertical" >
            <TextView 
                android:text="@string/nextstation_cn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="38px"
                android:layout_marginLeft="40px"/>
            
            <TextView 
                android:text="@string/nextstation_eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="34px"
                android:layout_marginLeft="40px"/>
           
            <ImageView 
                android:src="@drawable/red_dot"
                android:layout_width="25px"
                android:layout_height="25px"
                android:layout_marginLeft="40px"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="1440px"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#1874CD"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route_cn"
                android:textColor="#FFFFFF"
                android:textSize="36px"
                android:layout_marginLeft="320px" />
            
            <TextView 
                android:id="@+id/tv_route_name_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route_name"
                android:textColor="#FFFFFF"
                android:textSize="40px"
                android:layout_marginLeft="80px"/>
            <ImageView 
                android:src="@drawable/arrow_right"
                android:layout_width="25px"
                android:layout_height="50px"
                android:layout_marginLeft="40px"/>
            <ImageView 
                android:src="@drawable/arrow_right"
                android:layout_width="25px"
                android:layout_height="50px"/>
            <ImageView 
                android:src="@drawable/arrow_right"
                android:layout_width="25px"
                android:layout_height="50px"/>
            
            <TextView 
                android:id="@+id/tv_terminal_station_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40px"
                android:textColor="#FFFFFF"
                android:text="@string/terminal_cn"
                android:layout_marginLeft="40px"/>

        </LinearLayout>

    </LinearLayout>
    <android.support.v4.view.ViewPager
      android:id="@+id/liststation_viewpager"
      android:layout_width="1920px"
      android:layout_height="190px"/>

</LinearLayout>
